unpackaged/main/default/objects/bt_stripe__Data_Dictionary_Entry__c/bt_stripe__Data_Dictionary_Entry__c.object-meta.xml
<CustomObject>
    <description>This is used by our Events platform to store translated labels, buttons and other text for different languages you want to support. A custom Salesforce UI is used to build key value pairs for translated values for a language.</description>
    <label>Data Dictionary Entry</label>
    <nameField>
        <displayFormat>DDE -{00000}</displayFormat>
        <label>Data Dictionary Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Dictionary Entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>