unpackaged/main/default/objects/bt_stripe__Data_Dictionary_Entry__c/fields/bt_stripe__Data_Dictionary_Group__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Data_Dictionary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Dictionary Group</label>
    <referenceTo>bt_stripe__Data_Dictionary_Group__c</referenceTo>
    <relationshipLabel>Data Dictionary Entry</relationshipLabel>
    <relationshipName>Data_Dictionary_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>