unpackaged/main/default/objects/bt_stripe__Data_Dictionary_Entry__c/fields/bt_stripe__Locale__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Locale__c</fullName>
    <description>The Language or Locale of the Data Dictionary Entry</description>
    <inlineHelpText>The Language or Locale of the Data Dictionary Entry</inlineHelpText>
    <label>Language / Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ar</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>zh-cn</fullName>
                <label>Chinese (Simplified)</label>
            </value>
            <value>
                <fullName>zh-tw</fullName>
                <label>Chinese (Traditional)</label>
            </value>
            <value>
                <fullName>da</fullName>
                <label>Danish</label>
            </value>
            <value>
                <fullName>nl</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>fi</fullName>
                <label>Finnish</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>ht</fullName>
                <label>Haitian</label>
            </value>
            <value>
                <fullName>hi</fullName>
                <label>Hindi</label>
            </value>
            <value>
                <fullName>in-id</fullName>
                <label>Indonesian</label>
            </value>
            <value>
                <fullName>it</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>ja</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>ko</fullName>
                <label>Korean</label>
            </value>
            <value>
                <fullName>no</fullName>
                <label>Norwegian</label>
            </value>
            <value>
                <fullName>pl-pl</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>pt</fullName>
                <label>Portuguese</label>
            </value>
            <value>
                <fullName>ro-ro</fullName>
                <label>Romanian</label>
            </value>
            <value>
                <fullName>ru</fullName>
                <label>Russian</label>
            </value>
            <value>
                <fullName>so-so</fullName>
                <label>Somali</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>sv</fullName>
                <label>Swedish</label>
            </value>
            <value>
                <fullName>th</fullName>
                <label>Thai</label>
            </value>
            <value>
                <fullName>vi-vn</fullName>
                <label>Vietnamese</label>
            </value>
            <value>
                <fullName>af-za</fullName>
                <isActive>false</isActive>
                <label>af-za</label>
            </value>
            <value>
                <fullName>ar-ae</fullName>
                <isActive>false</isActive>
                <label>ar-ae</label>
            </value>
            <value>
                <fullName>ar-bh</fullName>
                <isActive>false</isActive>
                <label>ar-bh</label>
            </value>
            <value>
                <fullName>ar-dz</fullName>
                <isActive>false</isActive>
                <label>ar-dz</label>
            </value>
            <value>
                <fullName>ar-eg</fullName>
                <isActive>false</isActive>
                <label>ar-eg</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>